fix deleting and split form on two visible parts

--- a/src/modules/pages/NewApiPage/NewApiForm.scss
+++ b/src/modules/pages/NewApiPage/NewApiForm.scss
@@ -10,6 +10,10 @@ $radio-width: 125px;
         border: $hf-border;
         border-radius: $hf-border-radius;
         background-color: $hf-color-white;
+
+        & + .j-api-form__inner {
+            margin-top: $hf-padding-big;
+        }
     }
     &__section {
         border-bottom: $hf-border;
